--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build --secret id=aws,src=./.env.example . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker buildx build --secret id=aws,src=./.env.example . --file Dockerfile --tag my-image-name:$(date +%s)
