--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,4 +12,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker buildx build --secret id=aws,src=./.env.example . --file Dockerfile --tag my-image-name:$(date +%s)
+      env:
+        LINKFREE_MONGO_CONNECTION_STRING: "mongodb://localhost:12345/test"
+      run: docker buildx build --secret id=gh,src=$GITHUB_ENV . --file Dockerfile --tag my-image-name:$(date +%s)
