--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,8 +11,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
+    - name: Setup Env
       env:
         LINKFREE_MONGO_CONNECTION_STRING: "mongodb://localhost:12345/test"
-      #run: cdocker buildx build --secret id=gh,src=$GITHUB_ENV . --file Dockerfile
-      run: echo $GITHUB_ENV
+      run: echo "LINKFREE_MONGO_CONNECTION_STRING=$LINKFREE_MONGO_CONNECTION_STRING" >> $GITHUB_ENV
+    - name: Build the Docker image
+      run: cdocker buildx build --secret id=gh,src=$GITHUB_ENV . --file Dockerfile
