--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,7 @@ jobs:
     - name: Setup Env
       env:
         LINKFREE_MONGO_CONNECTION_STRING: "mongodb://localhost:12345/test"
-      run: echo "LINKFREE_MONGO_CONNECTION_STRING=$LINKFREE_MONGO_CONNECTION_STRING" >> $GITHUB_ENV
+      run: echo "LINKFREE_MONGO_CONNECTION_STRING=$LINKFREE_MONGO_CONNECTION_STRING" >> "$GITHUB_ENV"
+    - run: cat "$GITHUB_ENV"
     - name: Build the Docker image
       run: docker buildx build --secret id=gh,src=$GITHUB_ENV . --file Dockerfile
